T3CH Upgrader Changelog:
========================
v1.8   23/03/2009
 Change: Change to cope with new xbmc paths "special://" otherwise fallback to old style.
 Change: Menu options Maintain Additional Deletes and Copies selection/editing behaviour.
 Change: Changelog.txt moved to script home dir.
 Change: Some code tidyup (code logging etc)
 New: Menu option to Select from multiple Local Archives (rar | zip)
v1.7.5 07/12/2008
 Change: Improved detection of new build archives with alternative filenames.
 Change: Online build archive filenames found without a date will prompt for a date before download.
 Change: settings changed to use bool type instead of str Yes, No - (converts old settings on strtup)
 New: Setting "Check For New T3CH on Script Startup?" - If disabled, instead of checking online, MainMenu shows "Check For New T3CH Build"
         This enables the script to be used without having to remove network cable.
v1.7.4 13/10/2008
  Fix: Script self updater module. (unfortunately this means you'll have to manually update script as v1.7.3 will hang during update)
  Change: Removed all custom 'text viewer' skins, now uses skin predefine DialogScript (benefit: all skins covered, reduces script size).
  Change: Better startup detection of lanaguage builtin.
  Change: Improved detection of old pre-Atlantis xbmc build and cleaner exit of script.
v1.7.3 25/09/08
  Fix: Plugin\Video folder not copied due to it looking for 'videos'
  New: MediaStream skin (created by smuto)
  New: Default 720p skin and PM3.HD
  New: Dutch language strings.
  Updated: Added 'autoscroll' to skins.
  Change: For xbmc Atlantis; Uses Language builtin.
  Change: For xbmc Atlantis; Skin XML path changed.
v1.7.2 26/08/08
  Change: Delete, if exists, .cfg_new before file writting out new build path.
  Change: Copying of subfolders root checked before copytree.
  Change: Tidied up some debug logging.
v1.7.1 18/08/08
  Fix: Potential copytree failure due to dest root not existing.
v1.7 13/08/08